--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -7,7 +7,7 @@
             "sub": [
                 {
                     "id": "S01",
-                    "description": "Enable Armbina kernal upgrades",
+                    "description": "Enable Armbina kernel upgrades",
                     "command": [
                         "set_safe_boot unhold"
                     ],
@@ -19,7 +19,7 @@
                 },
                 {
                     "id": "S02",
-                    "description": "Disable Armbina kernal upgrades",
+                    "description": "Disable Armbina kernel upgrades",
                     "command": [
                         "set_safe_boot freeze"
                     ],
@@ -31,7 +31,7 @@
                 },
                 {
                     "id": "S03",
-                    "description": "Edit the boot enviroment (WIP)",
+                    "description": "Edit the boot environment (WIP)",
                     "command": [
                         "get_user_continue \"This will open /boot/armbianEnv.txt file to edit\nCTRL+S to save\nCTLR+X to exit\nwould you like to continue?\" process_input",
                         "nano /boot/armbianEnv.txt"
@@ -166,9 +166,9 @@
                 },
                 {
                     "id": "N07",
-                    "description": "Disconect and forget all wifi connections (Advanced)",
+                    "description": "Disconnect and forget all wifi connections (Advanced)",
                     "command": [
-                        "get_user_continue \"Disconect and forget all wifi connections\nWould you like to contiue?\" process_input",
+                        "get_user_continue \"Disconnect and forget all wifi connections\nWould you like to contiue?\" process_input",
                         "LC_ALL=C nmcli --fields UUID,TIMESTAMP-REAL,TYPE con show | grep wifi |  awk '{print $1}' | while read line; \\ ",
 						"do nmcli con delete uuid  $line; done > /dev/null"
                     ],
@@ -180,9 +180,9 @@
                 },
                 {
                     "id": "N08",
-                    "description": "Toggle system IPv6/IPv4 internet protical",
+                    "description": "Toggle system IPv6/IPv4 internet protocol",
                     "command": [
-                        "get_user_continue \"This will toggle your internet protical\nWould you like to contiue?\" process_input",
+                        "get_user_continue \"This will toggle your internet protocol\nWould you like to contiue?\" process_input",
                         "toggle_ipv6 | show_infobox"
                     ],
                     "show": true,
@@ -213,7 +213,7 @@
             "sub": [
                 {
                     "id": "L00",
-                    "description": "Change Globla timezone (WIP)",
+                    "description": "Change Global timezone (WIP)",
                     "command": [
 						"dpkg-reconfigure tzdata"
                     ],
@@ -225,7 +225,7 @@
                 },
                 {
                     "id": "L01",
-                    "description": "Change Locales reconfigure the language and charitorset",
+                    "description": "Change Locales reconfigure the language and character set",
                     "command": [
                         	"dpkg-reconfigure locales",
 							"source /etc/default/locale ; sed -i \"s/^LANGUAGE=.*/LANGUAGE=$LANG/\" /etc/default/locale",
@@ -302,7 +302,7 @@
             "sub": [
                 {
                     "id": "H00",
-                    "description": "About This systme. (WIP)",
+                    "description": "About This system. (WIP)",
                     "command": [
                         "show_message <<< \"This app is to help exicute prosedures to configure your system\n\nSome option may not work on manualy modified sytemes\""
                     ],
