chore: Update Armbian configuration utility documentation

--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -273,7 +273,8 @@
                     "id": "L02",
                     "description": "Change Keyboard layout",
                     "command": [
-						"dpkg-reconfigure keyboard-configuration ; setupcon "
+						"dpkg-reconfigure keyboard-configuration ; setupcon ",
+                        "update-initramfs -u"
                     ],
                     "show": true,
                     "status": "Active",
