migrate conditions to json file
Signed-off-by: Gunjan Gupta <gunjan@wesion.com>

--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -3,7 +3,6 @@
         {
             "id": "System",
             "description": "System wide and admin settings",
-            "show": true,
             "sub": [
                 {
                     "id": "S01",
@@ -11,11 +10,11 @@
                     "command": [
                         "set_safe_boot unhold"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "[[ -n \"$(apt-mark showhold)\" ]]"
                 },
                 {
                     "id": "S02",
@@ -23,11 +22,11 @@
                     "command": [
                         "set_safe_boot freeze"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "[[ -z \"$(apt-mark showhold)\" ]]"
                 },
                 {
                     "id": "S03",
@@ -36,7 +35,6 @@
                         "get_user_continue \"This will open /boot/armbianEnv.txt file to edit\nCTRL+S to save\nCTLR+X to exit\nwould you like to continue?\" process_input",
                         "nano /boot/armbianEnv.txt"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -48,11 +46,11 @@
                     "command": [
                         "Headers_install"
                     ],
-                    "show": true,
                     "status": "Pending Review",
                     "doc_link": "https://github.com/armbian/config/wiki#System",
                     "src_reference": "https://github.com/armbian/config/blob/master/debian-config-jobs#L160",
-                    "author": "https://github.com/Tearran"
+                    "author": "https://github.com/Tearran",
+                    "condition": "! are_headers_installed"
                 },
                 {
                     "id": "S05",
@@ -60,18 +58,17 @@
                     "command": [
                         "Headers_remove"
                     ],
-                    "show": true,
                     "status": "Pending Review",
                     "doc_link": "https://github.com/armbian/config/wiki#System",
                     "src_reference": "https://github.com/armbian/config/blob/master/debian-config-jobs#L160",
-                    "author": "https://github.com/Tearran"
+                    "author": "https://github.com/Tearran",
+                    "condition": "are_headers_installed"
                 }
             ]
         },
         {
             "id": "Network",
             "description": "Wireless, Ethernet, and Network settings",
-            "show": true,
             "sub": [
                 {
                     "id": "N00",
@@ -81,11 +78,11 @@
                         "debconf-apt-progress -- apt-get -y install bluetooth bluez bluez-tools",
                         "check_if_installed xserver-xorg && debconf-apt-progress -- apt-get -y --no-install-recommends install pulseaudio-module-bluetooth blueman"
                     ],
-                    "show": false,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "! check_if_installed bluetooth && ! check_if_installed bluez && ! check_if_installed bluez-tools"
                 },
                 {
                     "id": "N01",
@@ -95,25 +92,25 @@
 						"debconf-apt-progress -- apt-get -y remove bluetooth bluez bluez-tools",
 						"check_if_installed xserver-xorg && debconf-apt-progress -- apt-get -y remove pulseaudio-module-bluetooth blueman",
                         "debconf-apt-progress -- apt -y -qq autoremove"
-		       ],
-                    "show": false,
+		            ],
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
                 },
-                                {
+                {
                     "id": "N02",
                     "description": "Bluetooth Discover",
                     "command": [
 						"get_user_continue \"Verify that your Bluetooth device is discoverable!\" process_input ; connect_bt_interface"
 
                     ],
-                    "show": false,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
                 },
                 {
                     "id": "N03",
@@ -121,11 +118,11 @@
                     "command": [
                         "see_current_apt; debconf-apt-progress -- apt-get -y --no-install-recommends install lirc"
                     ],
-                    "show": false,
                     "status": "Testing",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "! check_if_installed lirc"
                 },
                 {
                     "id": "N04",
@@ -133,11 +130,11 @@
                     "command": [
                         "see_current_apt; debconf-apt-progress -- apt-get -y --no-install-recommends install lirc"
                     ],
-                    "show": false,
                     "status": "Testing",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "check_if_installed lirc"
                 },
                 {
                     "id": "N05",
@@ -145,7 +142,6 @@
                     "command": [
                         "nmtui connect"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -158,11 +154,11 @@
                         "get_user_continue \"This will open interface file to edit\nCTRL+S to save\nCTLR+X to exit\nwould you like to continue?\" process_input",
                         "nano /etc/network/interfaces"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "[ -f /etc/network/interface ]"
                 },
                 {
                     "id": "N07",
@@ -172,7 +168,6 @@
                         "LC_ALL=C nmcli --fields UUID,TIMESTAMP-REAL,TYPE con show | grep wifi |  awk '{print $1}' | while read line; \\ ",
 						"do nmcli con delete uuid  $line; done > /dev/null"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -185,7 +180,6 @@
                         "get_user_continue \"This will toggle your internet protocol\nWould you like to continue?\" process_input",
                         "toggle_ipv6 | show_infobox"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -198,7 +192,7 @@
                         "get_user_continue \"This operation will install necessary software and add configuration files.\nDo you wish to continue?\" process_input",
                         "hotspot_setup"
                     ],
-                    "show": false,
+                    "disabled": true,
                     "status": "WIP",
                     "doc_link": "",
                     "src_reference": "",
@@ -215,11 +209,11 @@
 						"cp /usr/share/doc/avahi-daemon/examples/ssh.service /etc/avahi/services/",
 						"service avahi-daemon restart"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "! check_if_installed avahi-daemon"
                 },
                 {
                     "id": "N11",
@@ -230,18 +224,17 @@
 						"systemctl stop avahi-daemon avahi-daemon.socket",
 						"debconf-apt-progress -- apt-get -y purge avahi-daemon"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
-                    "author": ""
+                    "author": "",
+                    "condition": "check_if_installed avahi-daemon"
                 }
             ]
         },
         {
             "id": "Localisation",
             "description": "Localisation",
-            "show": true,
             "sub": [
                 {
                     "id": "L00",
@@ -249,7 +242,6 @@
                     "command": [
 						"dpkg-reconfigure tzdata"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -263,7 +255,6 @@
 							"source /etc/default/locale ; sed -i \"s/^LANGUAGE=.*/LANGUAGE=$LANG/\" /etc/default/locale",
 		                    "export LANGUAGE=$LANG"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -275,7 +266,6 @@
                     "command": [
 						"dpkg-reconfigure keyboard-configuration ; setupcon "
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -287,7 +277,7 @@
                     "command": [
                         "get_user_continue \"This is only a frontend test\" process_input"
                     ],
-                    "show": false,
+                    "disabled": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -298,7 +288,6 @@
         {
             "id": "Software",
             "description": "Run/Install 3rd party applications",
-            "show": true,
             "sub": [
                 {
                     "id": "I00",
@@ -307,7 +296,6 @@
                         "get_user_continue \"This will update apt\" process_input",
                         "debconf-apt-progress -- apt update"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -319,7 +307,6 @@
                     "command": [
                         "armbianmonitor -m | show_infobox"
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -330,7 +317,6 @@
         {
             "id": "Help",
             "description": "About this app",
-            "show": true,
             "sub": [
                 {
                     "id": "H00",
@@ -338,7 +324,6 @@
                     "command": [
                         "show_message <<< \"This app is to help execute procedures to configure your system\n\nSome options may not work on manually modified systems\""
                     ],
-                    "show": true,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
@@ -350,7 +335,6 @@
                     "command": [
                         "show_message <<< see_use"
                     ],
-                    "show": false,
                     "status": "Active",
                     "doc_link": "",
                     "src_reference": "",
