Add jq whiptail and to default package dependencies
error in workflow indicates commas are needed

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,7 +21,7 @@ jobs:
       homepage: "https://www.armbian.com"
       section: "default"
       priority: "optional"
-      depends: "bash jq whiptail"
+      depends: "bash, jq, whiptail"
       description: "Configng"
 
     secrets:
