--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -74,7 +74,7 @@
                     "doc_link": "https://github.com/armbian/config/wiki#System",
                     "src_reference": "",
                     "author": "https://github.com/igorpecovnik",
-                    "condition": ""
+                    "condition": "[[ -n $(ls /sbin/armbian-install) ]]"
                 }
 
             ]
