--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -155,8 +155,8 @@
                             "condition": ""
                         }
                     ],
-                    "disabled": false,
-                    "status": "Active",
+                    "disabled": true,
+                    "status": "WIP",
                     "author": "",
                     "condition": ""
                 }
