modified:   lib/armbian-configng/config.ng.jobs.json

--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -241,7 +241,7 @@
                             "condition": "grep -q '^ChallengeResponseAuthentication yes' /etc/ssh/sshd_config && [ -f /root/.google_authenticator ]"
                             }
                     ],
-                    "disabled": false,
+                    "disabled": true,
                     "status": "Testing",
                     "author": "",
                     "condition": ""
